--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -22,6 +22,7 @@ pipeline {
         stage('plan') {
             steps {
                 sh '''
+                    cd 01-vpc/
                     terraform plan
                 '''
             }
@@ -29,6 +30,7 @@ pipeline {
         stage('apply') {
             steps {
                 sh '''
+                    cd 01-vpc/
                     terraform apply -auto-approve
                 '''
             }
@@ -36,6 +38,7 @@ pipeline {
         stage('destroy') {
             steps {
                 sh '''
+                    cd 01-vpc/
                     terraform destroy -auto-approve
                 '''
             }
