--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -35,14 +35,14 @@ pipeline {
                 '''
             }
         }
-        stage('destroy') {
-            steps {
-                sh '''
-                    cd 01-vpc/
-                    terraform destroy -auto-approve
-                '''
-            }
-        }
+        // stage('destroy') {
+        //     steps {
+        //         sh '''
+        //             cd 01-vpc/
+        //             terraform destroy -auto-approve
+        //         '''
+        //     }
+        // }
     }
 
     post { 
