--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -15,6 +15,7 @@ pipeline {
         stage('init') {
             steps {
                 sh '''
+                    cd 01-vpc/
                     terraform init -reconfigure
                 '''
             }
