--- a/01-vpc/Jenkinsfile
+++ b/01-vpc/Jenkinsfile
@@ -29,6 +29,10 @@ pipeline {
             }
         }
         stage('apply') {
+            input {
+                message "Should we continue?"
+                ok "Yes, we should."
+            }
             steps {
                 sh '''
                     cd 01-vpc/
